--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 #app{
     max-width: 600px;
     margin: auto;
-    background-color: yellowgreen;
+    background-color: rgb(133, 217, 240);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px;
@@ -27,12 +27,55 @@ h1{
 }
 #orderForm{
     flex: 1;
-    padding: 10px;
+    padding: 8px;
     border: 1px solid whitesmoke;
+}
+
+#orderForm, button{
+    cursor: pointer;
+    padding: 8px 16px;
+    background-color: rgb(91, 91, 243);
+    color: white;
+    border-radius: 4px; 
+    transition: background-color 0.3s ease;
 }
 
 p{
     padding-top: 10px;
-    color: rgb(255, 0, 217);
+    color: rgb(255, 0, 21);
+    font-size: 20px;
+    font-weight: bold;
     
+}
+#orderForm button:hover{
+    background-color: rgb(68, 124, 103);
+}
+
+#orderInput{
+    flex: 1;
+    padding: 8px;
+    border: 1px solid rgb(233, 41, 41);
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.order-item {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+
+.order-item button{
+    
+    padding: 4px 8px;
+    background-color: rgb(29, 118, 19);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.order-item button:hover{
+    background-color: rgb(244, 111, 87);
 }
